tests/snapshots/prompt_snapshots__evaluator_prompt_minimal.snap
---
source: tests/prompt_snapshots.rs
expression: output
---
# Evaluator Instructions

You are an evaluator assessing the quality of work performed by an AI agent.
Review the task definition, the agent identity that was used, the produced artifacts,
and the task log. The evidence in this prompt is self-contained. Do not invoke tools, inspect the repository, or rerun verification commands. Then produce a JSON evaluation.

## Task Definition

**Title:** Simple task

## Agent Identity

*No role was assigned.*

*No motivation was assigned.*

## Task Artifacts

*No artifacts were recorded.*

## Task Log

*No log entries.*

## Evaluation Criteria

Assess the agent's work on these dimensions (each scored 0.0 to 1.0):

### Individual Quality (70% of overall score)

1. **correctness** — Does the output match the desired outcome? Are verification
criteria satisfied? Is the implementation functionally correct?
2. **completeness** — Were all aspects of the task addressed? Are there missing
pieces, unhandled edge cases, or incomplete deliverables?
3. **efficiency** — Was the work done efficiently within the allowed parameters?
Minimal unnecessary steps, no wasted effort, appropriate scope.
4. **style_adherence** — Does the output follow project conventions, coding
standards, and the constraints set by the motivation (trade-offs respected,
non-negotiable constraints honoured)?

### Organizational Impact (30% of overall score)

5. **downstream_usability** — Is the output structured, documented, and formatted
so that downstream tasks can consume it without rework? Are interfaces clean,
artifacts well-named, and context properly handed off?
6. **coordination_overhead** — Did the agent work autonomously without creating
unnecessary work for others? Low overhead = high score. Deduct for: leaving
ambiguous state, requiring manual cleanup, creating confusion in the task log.
7. **blocking_impact** — Was the work completed in a timely manner relative to
the task scope? Did it avoid unnecessarily blocking downstream work? Consider
the task complexity and whether the time taken was proportionate.

Compute an overall **score** as a weighted average:
- correctness: 30%
- completeness: 20%
- efficiency: 10%
- style_adherence: 10%
- downstream_usability: 15%
- coordination_overhead: 10%
- blocking_impact: 5%

Note: `intent_fidelity` is mechanically injected from the FLIP score and does not need to be scored by the evaluator. Do not include it in your output dimensions.

### Rubric Spectrum

Map your overall score to one of these levels:

| Score Range | Level | Meaning |
|------------|-------|--------|
| 0.0–0.2 | Failing | Fundamental failures; output unusable |
| 0.2–0.4 | Below Expectations | Significant deficiencies; major rework needed |
| 0.4–0.6 | Meets Expectations | Acceptable but unremarkable |
| 0.6–0.8 | Exceeds Expectations | Solid, reliable work |
| 0.8–1.0 | Exceptional | Best-in-class output |

Calibrate your scores against this spectrum. Most competent work falls in 0.6–0.8.

Note: No downstream tasks are listed. Score organizational dimensions based
on general output quality: is the work self-contained, well-documented, and
ready for potential future consumers? Default to 0.7 if insufficient signal.

## Required Output

Respond with **only** a JSON object (no markdown fences, no commentary):

```
{
  "score": <0.0-1.0>,
  "dimensions": {
    "correctness": <0.0-1.0>,
    "completeness": <0.0-1.0>,
    "efficiency": <0.0-1.0>,
    "style_adherence": <0.0-1.0>,
    "downstream_usability": <0.0-1.0>,
    "coordination_overhead": <0.0-1.0>,
    "blocking_impact": <0.0-1.0>
  },
  "notes": "<brief explanation of strengths, weaknesses, and suggestions>"
}
```
